styles.css
body{
    font-family: 'Segeo UI', tahoma, Geneva,verdana, sans-serif;
    background: color #f0f2f5;
    display:flex;
    justify-content:center;
    align-items: center;

    margin: 0;
}
main{
    background-color: white;
    padding: ;
    border: 10px;
    box-shadow: 0 4px 6px rbga(0, 0, 0, 0.1);
    width: 90%;
    max-width: 400px;
    text-align: center;
}
header h1 {
    color: #333;
    margin-bottom: 0.5rem;

}
header p{
    color:#666;
    font-size: medium;
    margin-bottom: 1.5rem;
}
form{
    display: flex;
    gap: 15px;
}
label{
    text-align: left;
    font-weight: bold;
    color: #333;
}
input, select{
    padding: 10px;
    border: 1px solid;
    border-radius: 5px;
    font-size: 1rem;

}
button{
    padding: 12px;
    background-color: #28a745;
    color: white;
    border: none;
    border-radius: 5px;
    font-size: medium;
    

}

